--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
 <app-header></app-header>
-<router-outlet ></router-outlet>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <router-outlet ></router-outlet>
+    </div>
+  </div>
+</div>
+
 <app-footer></app-footer>
