--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,8 @@
-<p>footer works!</p>
+<div class="container">
+  <footer class="py-3 my4">
+    <ul class="nav justify-content-center border-bottom pb-3 mb-3"></ul>
+    <p class="text-center text-body-secondary">
+      &#64; 2024 Company, Inc. All rights reserved.
+    </p>
+  </footer>
+</div>
