--- a/src/app/pages/usuarios/listagem/listagem.component.html
+++ b/src/app/pages/usuarios/listagem/listagem.component.html
@@ -1,12 +1,14 @@
 <div class="container">
-  <h1>Usuários</h1>
+<my-title title="Usuários"></my-title>
+  <hr />
   <table class="table">
-    <thead>
+    <thead class="table-dark">
       <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
+        <th scope="col">ID</th>
+        <th scope="col">Nome</th>
+        <th scope="col">Idade</th>
+        <th scope="col">Status</th>
+        <th>Ações</th>
       </tr>
     </thead>
     <tbody class="table-group-divider">
@@ -15,19 +17,9 @@
         <td>Mark</td>
         <td>Otto</td>
         <td>mdo</td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>fat</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td colspan="2">Larry the Bird</td>
-        <td>twitter</td>
+        <td>Ações</td>
       </tr>
     </tbody>
   </table>
-  <a class="btn btn-primary" href="/cadastroUsuario" role="button">Cadastrar Usuário</a>
+  <a class="btn btn-dark" href="/cadastroUsuario" role="button">Cadastrar</a>
 </div>
