--- a/src/app/pages/produtos/cadastro-edicao/cadastro-edicao.component.html
+++ b/src/app/pages/produtos/cadastro-edicao/cadastro-edicao.component.html
@@ -1,1 +1,36 @@
-<p>cadastro-edicao works!</p>
+<my-title *ngIf="!id" title="Produtos / Cadastrar"></my-title>
+<my-title *ngIf="id" title="Produtos / Editar"></my-title>
+<hr>
+
+<form [formGroup]="produtoForm" (submit)="cadastrarEditarProdutos()">
+  <div class="row">
+    <div class="col">
+      <div class="mb-3">
+        <label for="nomeProduto" class="form-label">Nome</label>
+        <input type="text" class="form-control" id="nomeProduto" formControlName="nomeProduto">
+        <div *ngIf="produtoForm.get('nomeProduto')?.errors?.['required']" class="form-text text-danger">Campo obrigatório</div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="mb-3">
+        <label for="codigoBarras" class="form-label">Código de Barras</label>
+        <input type="text" class="form-control" id="codigoBarras" formControlName="codigoBarras">
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <div class="mb-3">
+        <label for="quantidade" class="form-label">Quantidade</label>
+        <input type="number" class="form-control" id="quantidade" formControlName="quantidade">
+      </div>
+    </div>
+    <div class="col">
+      <div class="mb-3">
+        <label for="preco" class="form-label">Preço</label>
+        <input type="number" class="form-control" id="preco" formControlName="preco">
+      </div>
+    </div>
+  </div>
+  <button type="submit" class="btn btn-primary" [disabled]="produtoForm.invalid">{{id ? 'Editar' : 'Cadastrar' }}</button>
+</form>
