--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<div class="container ">
+  <div class="py-3 my4 ">
+    <p class="text-center text-body-secondary display-1 ">
+      Minsait
+    </p>
+  </div>
+</div>
