--- a/src/app/pages/produtos/listagem/listagem.component.html
+++ b/src/app/pages/produtos/listagem/listagem.component.html
@@ -18,7 +18,8 @@
         <td>{{ produto.nomeProduto }}</td>
         <td>{{ produto.codigoBarras }}</td>
         <td>{{ produto.quantidade }}</td>
-        <td>{{ produto.preco }}</td>
+        <td>{{ produto.preco | currency:'R$ ' }}</td>
+        <!-- <td>{{ produto.preco | currency }}</td> -->
         <td>
           <a [routerLink]="'/produtos/editar/' + produto.id" class="btn btn-secondary btn-sm">Editar</a>
           <button type="button" class="btn btn-danger btn-sm ms-2" (click)="removerProduto(produto.id || 0)">Excluir</button>
