--- a/src/app/pages/produtos/cadastro-edicao/cadastro-edicao.component.html
+++ b/src/app/pages/produtos/cadastro-edicao/cadastro-edicao.component.html
@@ -26,12 +26,14 @@
       <div class="mb-3">
         <label for="quantidade" class="form-label">Quantidade</label>
         <input type="number" class="form-control" id="quantidade" formControlName="quantidade">
+        <div *ngIf="produtoForm.get('quantidade')?.errors?.['required']" class="form-text text-danger">Campo obrigatório</div>
       </div>
     </div>
     <div class="col">
       <div class="mb-3">
         <label for="preco" class="form-label">Preço</label>
-        <input type="text" class="form-control" id="preco" formControlName="preco" prefix="R$ " mask="separator.2" thousandSeparator=",">
+        <input type="text" class="form-control" id="preco" formControlName="preco" prefix="R$ " min="0.01" mask="separator.2" thousandSeparator=",">
+        <div *ngIf="produtoForm.get('preco')?.errors?.['required']" class="form-text text-danger">Campo obrigatório</div>
       </div>
     </div>
   </div>
