--- a/src/app/pages/usuarios/listagem/listagem.component.html
+++ b/src/app/pages/usuarios/listagem/listagem.component.html
@@ -18,8 +18,8 @@
         <td>{{ usuario.idade }}</td>
         <td>{{ usuario.ativo ? "Ativo" : "Desativado" }}</td>
         <td>
-          <button type="button" class="btn btn-danger btn-sm" (click)="removerUsuario(usuario.id || 0)">Remover</button>
-          <a [routerLink]="'/usuarios/editar/' + usuario.id" class="btn btn-secondary btn-sm ms-2">Editar</a>
+          <a [routerLink]="'/usuarios/editar/' + usuario.id" class="btn btn-secondary btn-sm">Editar</a>
+          <button type="button" class="btn btn-danger btn-sm ms-2" (click)="removerUsuario(usuario.id || 0)">Excluir</button>
         </td>
       </tr>
     </tbody>
